[package]
name = "xorca"
description = "The xorca rust client to interact with the xorca program."
version = "0.0.0"
homepage = "https://orca.so"
license-file = "../LICENSE"
keywords = ["solana", "crypto", "defi", "dex", "staking"]
authors = ["team@orca.so"]
edition = "2021"

[features]
default = ["floats"]
serde = ["dep:serde", "dep:serde_with", "dep:serde-big-array"]
fetch = ["dep:solana-client", "dep:solana-sdk", "dep:solana-account-decoder"]
floats = ["dep:libm"]

[dependencies]
borsh = { version = "^0.10" }
num-derive = { version = "^0.4" }
num-traits = { version = "^0.2" }
ethnum = { version = "^1.1" }
libm = { version = "^0.2", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.10", optional = true }
serde-big-array = { version = "^0.5", optional = true }
solana-program = { version = ">=1.16, <3.0" }
solana-sdk = { version = ">=1.16, <3.0", optional = true }
solana-client = { version = ">=1.16, <3.0", optional = true }
solana-account-decoder = { version = ">=1.16, <3.0", optional = true }
thiserror = { version = "^2.0" }
