[package]
name = "xorca"
description = "The xorca rust client to interact with the xorca program."
version = "0.0.0"
homepage = "https://orca.so"
license-file = "../LICENSE"
keywords = ["solana", "crypto", "defi", "dex", "staking"]
authors = ["team@orca.so"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["floats"]
serde = ["dep:serde", "dep:serde_with", "dep:serde-big-array"]
fetch = ["dep:solana-client", "dep:solana-sdk", "dep:solana-account-decoder"]
floats = ["dep:libm"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
borsh = { version = "^0.10" }
num-derive = { version = "^0.4" }
num-traits = { version = "^0.2" }
ethnum = { version = "^1.1" }
libm = { version = "^0.2", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.10", optional = true }
serde-big-array = { version = "^0.5", optional = true }
solana-program = { version = "~2.3" }
solana-sdk = { version = "~2.3", optional = true }
solana-client = { version = "~2.3", optional = true }
solana-account-decoder = { version = "~2.3", optional = true }
thiserror = { version = "^2.0" }
wasm-bindgen = { version = "^0.2", optional = true }
js-sys = { version = "^0.3", optional = true }
