[package]
name = "xorca"
description = "A Rust client library for interacting with the xORCA staking program on Solana."
version = "0.1.3"
homepage = "https://orca.so"
repository = "https://github.com/orca-so/xorca"
license-file = "LICENSE"
keywords = ["solana", "defi", "staking", "orca", "xorca"]
authors = ["Orca Team <team@orca.so>"]
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/xorca"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["floats"]
serde = ["dep:serde", "dep:serde_with", "dep:serde-big-array"]
fetch = [
    "dep:solana-client",
    "dep:solana-sdk",
    "dep:solana-account-decoder",
    "dep:spl-token-interface",
    "dep:solana-program-pack",
]
floats = ["dep:libm"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
borsh = { version = "^0.10" }
num-derive = { version = "^0.4" }
num-traits = { version = "^0.2" }
ethnum = { version = "^1.1" }
libm = { version = "^0.2", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.10", optional = true }
serde-big-array = { version = "^0.5", optional = true }
solana-program = { version = "~2.3" }
solana-sdk = { version = "~2.3", optional = true }
solana-client = { version = "~2.3", optional = true }
solana-account-info = { version = "~2.3" }
solana-pubkey = { version = "~2.4" }
solana-instruction = { version = "~2.3" }
solana-program-error = { version = "~2.2.2" }
solana-cpi = { version = "~2.2.1" }
solana-account-decoder = { version = "~2.3", optional = true }
solana-account = { version = "~2.2.1" }
solana-program-pack = { version = "^2", optional = true }
thiserror = { version = "^2.0" }
wasm-bindgen = { version = "^0.2", optional = true }
js-sys = { version = "^0.3", optional = true }
spl-token-interface = { version = "1.0.0", optional = true }
anyhow = { version = "^1.0" }

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
base64 = { version = "^0.22" }
async-trait = { version = "^0.1" }
