[package]
name = "xorca_staking_test"
description = "The xorca solana program test suite."
version = "0.0.0"
homepage = "https://orca.so"
license-file = "../LICENSE"
keywords = ["solana", "crypto", "defi", "dex", "staking"]
authors = ["team@orca.so"]
publish = false
edition = "2021"

[dev-dependencies]
bincode = { version = "^1.3" }
borsh = { version = "^0.10" }
litesvm = { version = "^0.6.1" }
solana-sdk = { version = "~2.2.0" }
rstest = { version = "^0.25" }
xorca = { path = "../rust-client", features = ["fetch"] }


