[package]
name = "xorca_staking_test"
description = "The xorca solana program test suite."
version = "0.0.0"
homepage = "https://orca.so"
license-file = "../LICENSE"
keywords = ["solana", "crypto", "defi", "dex", "staking"]
authors = ["team@orca.so"]
publish = false
edition = "2021"

[dev-dependencies]
xorca-staking-program = { path = "../solana-program", features = ["test"] }
xorca = { path = "../rust-client", features = ["fetch"] }
bincode = { version = "^1.3" }
borsh = { version = "^0.10" }
litesvm = { version = "0.7.0" }
solana-sdk = { version = "~2.3" }
rstest = { version = "^0.25" }
base64 = { version = "^0.22" }
