[package]
name = "xorca-staking-program"
description = "The xORCA staking program"
version = "0.1.0"
homepage = "https://orca.so"
license-file = "../LICENSE"
keywords = ["solana", "crypto", "defi", "dex", "launchpad"]
authors = ["team@orca.so"]
edition = "2021"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
test = []

[dependencies]
base58 = { version = "^0.2" }
borsh = { version = "^0.10" }
pinocchio = "0.9.1"
pinocchio-associated-token-account = "0.2.0"
pinocchio-log = { version = "^0.5.0" }
pinocchio-pubkey = { version = "^0.3" }
pinocchio-system = "0.3.0"
pinocchio-token = { version = "^0.4.0" }
pinocchio-token-2022 = { version = "^0.1.0" }
shank = { version = "^0.4" }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
strum = { version = "^0.27", features = ["derive"] }
thiserror-no-std = { version = "^2.0" }
