[package]
name         = "xorca-titan-integration"
description  = "The xORCA Titan Interface SDK"
version      = "0.0.0"
homepage     = "https://orca.so"
repository   = "https://github.com/orca-so/xorca"
license-file = "../LICENSE"
keywords     = ["solana", "crypto", "defi", "stake", "amm"]
authors      = ["team@orca.so"]
edition      = "2024"
publish      = false

[dependencies]
async-trait                              = "0.1.80"
borsh                                    = "^0.10"
solana-account                           = "2.2.1"
solana-compute-budget                    = "2.2.1"
solana-pubkey                            = "2.2.1"
solana-sdk                               = "2.2.1"
solana-instruction                       = "2.2.1"
spl-associated-token-account             = "6"
titan-integration-template.path          = "integration-template"


[dev-dependencies]
assert_no_alloc                          = { version = "1.1.2", default-features = false }
litesvm                                  =  { version = "^0.6.1"}
rand                                     = "0.9.2"
rstest                                   = "0.18"
serde_json                               = "1.0.117"
solana-client                            = "2.2.1"
solana-program-pack                      = "2.2.1"
solana-sysvar                            = "2.2.1"
spl-token                                = { version = "7", features = ["no-entrypoint"] }
tokio                                    = { version = "1.48.0", features = ["full"] }
tracing                                  = "0.1.44"
tracing-subscriber                       = { version = "0.3.22", features = ["env-filter"] }
